Fetching and displaying message list for default chat

--- a/templates/index.html
+++ b/templates/index.html
@@ -109,8 +109,8 @@
                       <img src="https://bootdey.com/img/Content/avatar/avatar2.png">
                     </div>
                   </div>
-                  <div class="col-sm-8 col-xs-7 heading-name">
-                    <a class="heading-name-meta">GPT role
+                  <div class="col-sm-8 col-xs-7 heading-name" >
+                    <a class="heading-name-meta">
                     </a>
                     <span class="heading-online">Online</span>
                   </div>
@@ -119,89 +119,6 @@
           
                 <!-- CONVERSATION -->
                 <div class="row message" id="conversation">
-
-                  <div class="row message-body">
-                    <div class="col-sm-12 message-main-receiver">
-                      <div class="receiver">
-                        <div class="message-text">
-                         Hi, what are you doing?!
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-          
-                  <div class="row message-body">
-                    <div class="col-sm-12 message-main-sender">
-                      <div class="sender">
-                        <div class="message-text">
-                          I am doing nothing man!
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-
-                <div class="row message-body">
-                    <div class="col-sm-12 message-main-receiver">
-                      <div class="receiver">
-                        <div class="message-text">
-                         Mess 1
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="row message-body">
-                    <div class="col-sm-12 message-main-receiver">
-                      <div class="receiver">
-                        <div class="message-text">
-                         Mess 3
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="row message-body">
-                    <div class="col-sm-12 message-main-receiver">
-                      <div class="receiver">
-                        <div class="message-text">
-                         Mess 3
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="row message-body">
-                    <div class="col-sm-12 message-main-receiver">
-                      <div class="receiver">
-                        <div class="message-text">
-                         Mess 3
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="row message-body">
-                    <div class="col-sm-12 message-main-receiver">
-                      <div class="receiver">
-                        <div class="message-text">
-                         Mess 3
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="row message-body">
-                    <div class="col-sm-12 message-main-receiver">
-                      <div class="receiver">
-                        <div class="message-text">
-                         Mess 3
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-
                 </div>
           
                 <!-- REPLY BAR begins-->
