--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
                   </div>
 
                   <div class="row compose-sideBar">
-                    <div class="row sideBar-body" style="height: fit-content;">
+                    <div class="row sideBar-body new-chat" style="height: fit-content;">
                     <form id="user-selection-form" style="display: inline-block;">
                         <div class="form-group">
                           <label for="language">Language</label>
@@ -143,8 +143,10 @@
           </div>
           
 </body>
-    <script src="static/js/api_call.js" type="module"></script>
+    <script src="static/js/api_call.js" type="application/javascript"></script>
     <script src="static/js/validation.js" type="module"></script>
+    <script src="static/js/chat_list.js" type="module"></script>
+    <script src="static/js/current_chat.js" type="module"></script>
     <script src="static/js/main.js" type="module"></script>
     
 </html>
