Adding and persisting a message

--- a/templates/index.html
+++ b/templates/index.html
@@ -132,7 +132,7 @@
                   <!--<div class="col-sm-1 col-xs-1 reply-recording">
                     <i class="fa fa-microphone fa-2x" aria-hidden="true"></i>
                   </div> -->
-                  <div class="col-sm-1 col-xs-1 reply-send">
+                  <div class="col-sm-1 col-xs-1 reply-send" id="reply-send">
                     <i class="fa fa-send fa-2x" aria-hidden="true"></i>
                   </div>
                 </div>
