--- a/templates/index.html
+++ b/templates/index.html
@@ -144,9 +144,7 @@
           
 </body>
     <script src="static/js/api_call.js" type="application/javascript"></script>
-    <script src="static/js/validation.js" type="module"></script>
-    <script src="static/js/chat_list.js" type="module"></script>
-    <script src="static/js/current_chat.js" type="module"></script>
+    <script src="static/js/render.js" type="module"></script>
     <script src="static/js/main.js" type="module"></script>
     
 </html>
